deployment/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vm-watcher
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-b
